[package]
name = "t-display-doodling"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = { version = "0.4.17", features = ["release_max_level_info"] }
mipidsi = "0.6.0"
tinybmp = "0.4.0"

[build-dependencies]
embuild = "0.31.0"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
